--- a/src/app/main/pages/errors/500/error-500.html
+++ b/src/app/main/pages/errors/500/error-500.html
@@ -4,6 +4,6 @@
         <div class="message">Well, you broke the internet!</div>
         <div class="sub-message">Just kidding, looks like we have an internal issue, please try again in a couple minutes.
         </div>
-        <a class="report-link md-accent-color" href="mailto:stefan@quesmed.com">Report this problem</a>
+        <a class="report-link md-accent-color" href="mailto:smig88@gmail.com">Report this problem</a>
     </div>
 </div>
