Initial working electron setup

--- a/src/app/main/pages/auth/login/login.html
+++ b/src/app/main/pages/auth/login/login.html
@@ -25,12 +25,12 @@
 						</div>
 					</div>
 				</md-input-container>
-				<div class="remember-forgot-password" layout="row" layout-xs="column" layout-align="space-between center">
+				<!-- <div class="remember-forgot-password" layout="row" layout-xs="column" layout-align="space-between center">
 					<md-checkbox class="remember-me" ng-model="vm.form.remember" aria-label="Remember Me">
 						<span>Remember Me</span>
 					</md-checkbox>
 					<a ui-sref="app.pages_auth_forgot-password" class="forgot-password md-accent-color">Forgot Password?</a>
-				</div>
+				</div> -->
 				<md-button type="submit" class="md-raised md-accent submit-button" aria-label="LOG IN" ng-disabled="loginForm.$invalid || loginForm.$pristine">
 					LOG IN
 				</md-button>
