--- a/src/app/main/admin/patientViewer/dialogs/appointment-dialog.html
+++ b/src/app/main/admin/patientViewer/dialogs/appointment-dialog.html
@@ -62,7 +62,7 @@
 										<label>SNP - Size</label>
 										<input type="number" name="snp" ng-model="vm.appointment.snp.size" autocomplete="off">
 									</md-input-container>
-									<md-input-container style="height:57.5px;width:90px">
+									<md-input-container style="height:57.5px">
 										<label>SNP - Nostril</label>
 										<md-select name="snp_nostril" ng-model="vm.appointment.snp.nostril">
 											<md-option value="right">Right</md-option>
