--- a/src/app/main/admin/patients/patients.html
+++ b/src/app/main/admin/patients/patients.html
@@ -67,16 +67,14 @@
 										<th md-column><span>Patient Number</span></th>
 										<th md-column md-order-by="lastName" md-desc>Name</th>
 										<th md-column md-order-by="dateOfBirth" md-desc>Date of Birth</th>
-										<th md-column md-order-by="createdAt" md-desc><span>Created At</span></th>
 										<th md-column><span>Number of Appointments</span></th>
 									</tr>
 								</thead>
 								<tbody md-body>
-									<tr ng-class="{'deceased-cell': patient.deathDate}" md-row md-select="patient" md-auto-select="$ctrl.options.autoSelect" ng-repeat="patient in $ctrl.patients | orderBy: $ctrl.query.order | limitTo: $ctrl.query.limit : ($ctrl.query.page -1) * $ctrl.query.limit track by patient._id">
+									<tr ng-class="{'deceased-cell': $ctrl.deceasedCheck(patient)}" md-row md-select="patient" md-auto-select="$ctrl.options.autoSelect" ng-repeat="patient in $ctrl.patients | orderBy: $ctrl.query.order | limitTo: $ctrl.query.limit : ($ctrl.query.page -1) * $ctrl.query.limit track by patient._id">
 										<td md-cell>{{patient.patientNumber}}<br />{{patient.NHSnumber}}</td>
 										<td md-cell><md-icon md-font-icon="icon-gender-{{patient.gender}}" class="icon"></md-icon>{{patient.lastName}}, {{patient.firstName}}</td>
 										<td md-cell>{{patient.dateOfBirth | date:'dd/MM/yy'}}</td>
-										<td md-cell>{{patient.createdAt | date:'dd/MM/yy'}}</td>
 										<td md-cell>{{patient.appointments.length}}</td>
 										</td>
 									</tr>
