--- a/src/app/main/pages/auth/login/login.scss
+++ b/src/app/main/pages/auth/login/login.scss
@@ -1,6 +1,6 @@
 #login {
     height: 100%;
-    background: url('/assets/images/backgrounds/background.jpg') no-repeat;
+    background: url('./assets/images/backgrounds/background.jpg') no-repeat;
 	background-color: #6EE2FD;
     background-size: cover;
 
