--- a/src/app/main/pages/auth/terms-conditions/terms-conditions.scss
+++ b/src/app/main/pages/auth/terms-conditions/terms-conditions.scss
@@ -1,6 +1,6 @@
 #terms-conditions {
     height: 100%;
-    background: url('/assets/images/backgrounds/background.jpg') no-repeat;
+    background: url('./assets/images/backgrounds/background.jpg') no-repeat;
 	background-color: #6EE2FD;
     background-size: cover;
 
