--- a/src/app/toolbar/layouts/content-with-toolbar/toolbar.html
+++ b/src/app/toolbar/layouts/content-with-toolbar/toolbar.html
@@ -26,7 +26,7 @@
                 <md-button class="user-button" ng-click="$mdMenu.open($event)" aria-label="User settings">
                     <div layout="row" layout-align="space-between center">
                         <div class="avatar-wrapper">
-                            <img md-menu-align-target class="avatar" src="/assets/images/avatars/profile.jpg">
+                            <img md-menu-align-target class="avatar" src="./assets/images/avatars/profile.jpg">
                             <md-icon md-font-icon ng-class="vm.userStatus.icon" ng-style="{'color': vm.userStatus.color }" class="icon status s16">
                             </md-icon>
                         </div>
