Updated ALSFRS spacing

--- a/src/app/main/admin/patientViewer/patientViewer.scss
+++ b/src/app/main/admin/patientViewer/patientViewer.scss
@@ -1,6 +1,9 @@
 .appointment-form-divider {
 	padding: 5px 0;
-	margin: 20px 0;
+}
+
+.appointment-row-padding {
+	padding: 2px 0;
 }
 
 .radio-inline {
