--- a/src/app/main/admin/patientViewer/patientViewer.html
+++ b/src/app/main/admin/patientViewer/patientViewer.html
@@ -81,7 +81,7 @@
 													<td md-cell>{{appointment.weight | number:1}}</td>
 													<td md-cell>{{appointment.bmi | number:1}}</td>
 													<td md-cell>{{appointment.alsfrs.total | number:0}}</td>
-													<td md-cell>{{appointment.ess.total | number:0}}</td>
+													<td md-cell>{{appointment.ess | number:0}}</td>
 													<td md-cell>{{appointment.fvc.sitting | number:0}}</td>
 													<td md-cell>{{appointment.fvc.supine | number:0}}</td>
 													<td md-cell>{{appointment.snp.score | number:0}}</td>
