Move height to patient model

--- a/src/app/main/admin/patientViewer/patientViewer.html
+++ b/src/app/main/admin/patientViewer/patientViewer.html
@@ -148,4 +148,4 @@
 		<!-- / CONTENT -->
 	</div>
 </div>
-<appointment-dialog patient-id="$ctrl.patient._id" appointment="$ctrl.selected[0]"></appointment-dialog>
+<appointment-dialog patient="$ctrl.patient" appointment="$ctrl.selected[0]"></appointment-dialog>
