--- a/src/app/main/admin/patients/dialogs/patient-dialog.html
+++ b/src/app/main/admin/patients/dialogs/patient-dialog.html
@@ -35,6 +35,10 @@
 					</md-input-container>
 				</div>
 				<div>
+					<md-input-container>
+						<label>Height (cm)</label>
+						<input type="number" name="height" ng-model="vm.patient.height" autocomplete="off" required>
+					</md-input-container>
 					<md-input-container style="height:57.5px;">
 						<label>Gender</label>
 						<md-select name="gender" ng-model="vm.patient.gender" required>
