--- a/src/app/main/admin/patientViewer/dialogs/appointment-dialog.html
+++ b/src/app/main/admin/patientViewer/dialogs/appointment-dialog.html
@@ -32,7 +32,7 @@
 									</md-input-container>
 									<md-input-container>
 										<label>BMI</label>
-										<input type="number" name="height" ng-value="vm.appointment.bmi" disabled>
+										<input type="number" name="height" ng-value="vm.appointment.bmi | number:1" disabled>
 									</md-input-container>
 								</div>
 								<h3>Respiratory Effort</h3>
@@ -50,8 +50,8 @@
 										<input type="number" name="fvcSupine" ng-model="vm.appointment.fvc.supine" autocomplete="off">
 									</md-input-container>
 									<md-input-container>
-										<label>Predicted FVC</label>
-										<input type="number" name="predictedFVC" disabled ng-value="vm.predictedFVC">
+										<label>Predicted FVC (%)</label>
+										<input type="number" name="predictedFVC" disabled ng-value="vm.predictedFVC | number:2">
 									</md-input-container>
 									<md-input-container>
 										<label>spO2</label>
