--- a/src/app/main/admin/patientViewer/patientViewer.html
+++ b/src/app/main/admin/patientViewer/patientViewer.html
@@ -29,21 +29,25 @@
 								<div class="md-toolbar-tools">
 									<span>Appointments</span>
 									<span flex></span>
-									<span style="font-size:10px;">
-										Avg rate of change per month:
+									<span style="width:150px;font-size:11px;">
+										Average rate of change per month:
 									</span>
-									<md-input-container class="toolbar-input">
-										<label>ALSFRS-R</label>
-										<input type="text" name="rateALSFRS" ng-value="$ctrl.rate.aslfrs" disabled>
-									</md-input-container>
-									<md-input-container class="toolbar-input">
-										<label>Weight</label>
-										<input type="text" name="rateWeight" ng-value="$ctrl.rate.weight" disabled>
-									</md-input-container>
-									<md-input-container class="toolbar-input">
-										<label>FVC</label>
-										<input type="text" name="rateFVC" ng-value="$ctrl.rate.fvc" disabled>
-									</md-input-container>
+									<div class="toolbar-input" layout="column" flex>
+										<span>ALSFRS-R:</span>
+										<span>Weight:</span>
+									</div>
+									<div class="toolbar-input" layout="column" flex>
+										<span>{{$ctrl.rate.alsfrs}}%</span>
+										<span>{{$ctrl.rate.weight}}%</span>
+									</div>
+									<div class="toolbar-input" layout="column" flex>
+										<span>FVC Standing:</span>
+										<span>FVC Sitting:</span>
+									</div>
+									<div class="toolbar-input" layout="column" flex>
+										<span>{{$ctrl.rate.fvcStanding}}%</span>
+										<span>{{$ctrl.rate.fvcSitting}}%</span>
+									</div>
 									<md-button class="md-raised" ng-click="$ctrl.exportAppointments()">
 										<md-icon md-font-icon="icon-export" class="icon" aria-label="export"></md-icon> Export
 									</md-button>
